# my_cpp_cmake_template

./: .gitignore  CMakeLists.txt  README.md  index.html
app/: CMakeLists.txt  main.cc
bench/: CMakeLists.txt  main_bench.cpp
cmake/: DisplayVars.cmake  LTO.cmake  Sanitizer.cmake  Warnings.cmake
src/bar/: CMakeLists.txt  bar.cc
src/foo/: CMakeLists.txt  foo.cc
tests/: CMakeLists.txt
